--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+  box-shadow: 0.1rem 0.1rem 0.5rem rgba(31, 30, 30, 0.1);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body.white {
+  background-color: white;
+}
+
+body.dark {
+  background-color: rgb(23, 21, 21);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body.blue {
+  background-color: blue;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body.yellow {
+  background-color: yellow;
+  color: black;
+}
+
+body.aqua {
+  background-color: aqua;
+  color: black;
+}
+
+nav .themes span {
+  display: inline-block;
+  width: 2rem;
+  aspect-ratio: 1/1;
+  border: 0.1rem solid rgba(43, 38, 38, 0.152);
+  border-radius: 50%;
+  margin: 0 0.3rem;
+  cursor: pointer;
+}
+
+nav .themes .white {
+  background-color: white;
+}
+
+nav .themes .dark {
+  background-color: rgb(23, 21, 21);
+}
+
+nav .themes .blue {
+  background-color: blue;
+}
+
+nav .themes .yellow {
+  background-color: yellow;
+}
+
+nav .themes .aqua {
+  background-color: aqua;
 }
